<resources>
    <string name="app_name">ElasNoJogo</string>
    <string name="slogan">Encontre seu time!</string>
    <string name="logo">logo</string>
    <string name="digite_sua_senha">Digite sua senha</string>
    <string name="acessar_sua_conta">ACESSAR SUA CONTA</string>
    <string name="digite_o_seu_e_mail">Digite o seu e-mail</string>
    <string name="cadastre_se">CADASTRE-SE</string>
    <string name="entre_usando">ENTRE USANDO</string>
    <string name="n_o_tenho_conta">NÃO TENHO CONTA</string>
    <string name="mensagem_home">Olá, %1$s</string>
    <string name="nome_evento">nome evento</string>
    <string name="nome">%1$s</string>
    <string name="email">%2$s</string>
    <string name="telefone">%3$s</string>
    <string name="senha">%4$s</string>
    <string name="data">data</string>
    <string name="local">local</string>
    <string name="categoria">CATEGORIA</string>
    <string name="criar_evento">Criar Evento</string>
    <string name="nome_perfil">NOME</string>
    <string name="email_perfil">EMAIL</string>
    <string name="telefone_perfil">TELEFONE</string>
    <string name="senha_perfil">SENHA</string>
    <string name="salvar">SALVAR</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favoritos">FAVORITOS</string>
    <string name="meus_eventos">Meus Eventos</string>
    <string name="criarevento">CRIAR EVENTO</string>
    <string name="nome_do_evento">NOME DO EVENTO</string>
    <string name="data_evento">DATA</string>
    <string name="horario_evento">HORÁRIO</string>
    <string name="local_evento">LOCAL</string>
    <string name="categoria_evento">CATEGORIA</string>
    <string name="inserir_imagem">INSERIR UMA IMAGEM</string>
    <string name="segurança_evento">Esse evento é seguro para:</string>
    <string name="check_trans">Mulheres Trans</string>
    <string name="check_bi">Mulheres bissexuais</string>
    <string name="check_les">Mulheres lésbicas</string>
    <string name="check_naobi">Pessoas não-binárias</string>
    <string name="add_adm">ADICIONAR ADMINISTRADORAS</string>
    <string name="cadastrar_evento">CADASTRAR EVENTO</string>

    <string name="pesquisar">Pesquisar</string>
    <string name="resultados">Resultados</string>
    <string name="filtros">Filtros</string>
    <string name="mostrar_mais">Mostrar Mais</string>
    <string name="meus_eventoss">MEUS EVENTOS</string>

    <string-array name="lista_identificacao">
        <item>mulher cis</item>
        <item>mulher lésbica</item>
        <item>mulher trans</item>
        <item>não-binário</item>
        <item>não me identifico como mulher nem não-binário</item>
    </string-array>
    </resources>

  

